vlib/v/checker/tests/division_by_zero_int_err.out
vlib/v/checker/tests/division_by_zero_int_err.v:2:12: error: division by zero
    1 | fn main() {
    2 |     println(1/0)
      |               ^
    3 | }
