vlib/v/checker/tests/division_by_zero_int_err.v
fn main() {
	println(1/0)
}
